force-app/main/default/objects/Campania__c/Campania__c.object-meta.xml
<CustomObject>
    <label>Campania</label>
    <nameField>
        <label>Campania Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campanias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>