force-app/main/default/objects/Campania__c/fields/Cantidad_Mensajes__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Mensajes__c</fullName>
    <label>Cantidad Mensajes</label>
    <summaryForeignKey>Message__c.Campania__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>