force-app/main/default/objects/Campania__c/fields/Export__c.field-meta.xml
<CustomField>
    <fullName>Export__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Export</label>
    <referenceTo>Export__c</referenceTo>
    <relationshipLabel>Campanias</relationshipLabel>
    <relationshipName>Campanias</relationshipName>
    <type>Lookup</type>
</CustomField>