force-app/main/default/objects/Campania__c/fields/mc_request_id__c.field-meta.xml
<CustomField>
    <fullName>mc_request_id__c</fullName>
    <label>MC Request Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>