force-app/main/default/objects/Campania__c/fields/Message_Tracking_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Message_Tracking_Last_Update__c</fullName>
    <label>Message Tracking Last Update</label>
    <type>DateTime</type>
</CustomField>