force-app/main/default/objects/Campania__c/fields/Mobile_Connect_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Connect_Campaign_Id__c</fullName>
    <label>Mobile Connect Campaign Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>