force-app/main/default/objects/Campania__c/fields/Prosumer_cantidad_emails__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_cantidad_emails__c</fullName>
    <label>Prosumer cantidad emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>