force-app/main/default/objects/Campania__c/fields/Prosumer_Cantidad_Entregados__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Cantidad_Entregados__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prosumer Cantidad Entregados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>