force-app/main/default/objects/Campania__c/fields/Prosumer_Cantidad_Enviados__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Cantidad_Enviados__c</fullName>
    <label>Prosumer Cantidad Enviados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>