force-app/main/default/objects/Campania__c/fields/Prosumer_Creditos_Campania__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Creditos_Campania__c</fullName>
    <label>Prosumer Creditos Campaña</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>