force-app/main/default/objects/Campania__c/fields/Prosumer_Cuenta_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Cuenta_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prosumer Cuenta Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campanias</relationshipLabel>
    <relationshipName>Campanias</relationshipName>
    <type>Lookup</type>
</CustomField>