force-app/main/default/objects/Campania__c/fields/Prosumer_Email__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prosumer Email</label>
    <referenceTo>Prosumer_Email__c</referenceTo>
    <relationshipLabel>Campanias</relationshipLabel>
    <relationshipName>Campanias</relationshipName>
    <type>Lookup</type>
</CustomField>