force-app/main/default/objects/Campania__c/fields/Prosumer_Email_Asunto_Campania__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Email_Asunto_Campania__c</fullName>
    <label>Prosumer Email Asunto Campaña</label>
    <length>255</length>
    <type>Text</type>
</CustomField>