force-app/main/default/objects/Campania__c/fields/Prosumer_Email_Remitente_Email__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Email_Remitente_Email__c</fullName>
    <label>Prosumer Email Remitente Email</label>
    <type>Email</type>
</CustomField>