force-app/main/default/objects/Campania__c/fields/Prosumer_Email_Remitente_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Email_Remitente_Nombre__c</fullName>
    <label>Prosumer Email Remitente Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>