force-app/main/default/objects/Campania__c/fields/Prosumer_Estado__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Estado__c</fullName>
    <label>Prosumer Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Export Finalizado OK</fullName>
            </value>
            <value>
                <fullName>Export Finalizado con Errores</fullName>
            </value>
            <value>
                <fullName>Export en espera de ejecución</fullName>
            </value>
            <value>
                <fullName>Export en ejecución</fullName>
            </value>
            <value>
                <fullName>Send Automation Iniciado</fullName>
            </value>
            <value>
                <fullName>Send Automation en ejecución</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>