force-app/main/default/objects/Campania__c/fields/Prosumer_Fecha_de_Finalizacion__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Fecha_de_Finalizacion__c</fullName>
    <label>Prosumer Fecha de Finalizacion</label>
    <type>DateTime</type>
</CustomField>