force-app/main/default/objects/Campania__c/fields/Prosumer_Fecha_de_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Fecha_de_Inicio__c</fullName>
    <description>Fecha de creacion de la campaña. Cuando le dan aceptar al formulario.</description>
    <label>Prosumer Fecha de Inicio</label>
    <type>DateTime</type>
</CustomField>