force-app/main/default/objects/Campania__c/fields/Prosumer_Filtros_Audiencia__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Filtros_Audiencia__c</fullName>
    <label>Prosumer Filtros Audiencia</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>