force-app/main/default/objects/Campania__c/fields/Prosumer_Hora_de_Finalizacion__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Hora_de_Finalizacion__c</fullName>
    <label>Prosumer Hora de Finalizacion</label>
    <length>5</length>
    <type>Text</type>
</CustomField>