force-app/main/default/objects/Campania__c/fields/Prosumer_Hora_de_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Hora_de_Inicio__c</fullName>
    <label>Prosumer Hora de Inicio</label>
    <length>5</length>
    <type>Text</type>
</CustomField>