force-app/main/default/objects/Campania__c/fields/Prosumer_Mensaje_Audio__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Mensaje_Audio__c</fullName>
    <label>Prosumer Mensaje Audio</label>
    <length>18</length>
    <type>Text</type>
</CustomField>