force-app/main/default/objects/Campania__c/fields/Prosumer_Mensaje_SMS__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Mensaje_SMS__c</fullName>
    <label>Prosumer Mensaje SMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>