force-app/main/default/objects/Campania__c/fields/Prosumer_Moviles_en_Audiencia__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Moviles_en_Audiencia__c</fullName>
    <label>Prosumer Moviles en Audiencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>