force-app/main/default/objects/Campania__c/fields/Prosumer_SAQL_Audiencias__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_SAQL_Audiencias__c</fullName>
    <label>Prosumer SAQL Audiencias</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>