force-app/main/default/objects/Campania__c/fields/Prosumer_Sondeos_IVR_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Sondeos_IVR_Campaign_Id__c</fullName>
    <label>Prosumer Sondeos IVR Campaign Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>