force-app/main/default/objects/Campania__c/fields/Prosumer_Tamanio_de_Audiencia__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Tamanio_de_Audiencia__c</fullName>
    <description>Cantidad de personas que hay en la audiencia.</description>
    <label>Prosumer Tamaño de Audiencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>