force-app/main/default/objects/Campania__c/listViews/Busqueda.listView-meta.xml
<ListView>
    <fullName>Busqueda</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project__c</columns>
    <columns>Prosumer_Cantidad_Entregados__c</columns>
    <columns>Prosumer_Cantidad_Enviados__c</columns>
    <columns>Prosumer_Estado__c</columns>
    <columns>Prosumer_Mensaje_SMS__c</columns>
    <columns>Export__c</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Busqueda</label>
</ListView>